fix(content overflow) :  fixed content overflowing leading to uncessary scrollbar appearing

--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -29,6 +29,7 @@
   width: clamp(45vw, auto, 85vw);
   aspect-ratio: 1/1;
   object-fit: contain;
+  width: 300px;
 }
 .brandImg {
   height: 35px;
