--- a/src/components/ProductContainer.module.css
+++ b/src/components/ProductContainer.module.css
@@ -12,6 +12,8 @@
   grid-template-areas:
     "SuggestSlider SuggestSlider SuggestSlider SuggestSlider"
     "ProductFilter ProductCardContainer ProductCardContainer ProductCardContainer";
+  max-width: 100%;
+  overflow: hidden;
 }
 .ProductContainer > * {
   height: 100%;
