--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -29,12 +29,15 @@
   justify-content: center;
   gap: 2rem;
   width: inherit;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .formSection,
 .infoSection {
   flex: 1;
   min-width: 300px;
+  max-width: 100%;
 }
 
 .sectionTitle {
@@ -50,6 +53,7 @@
   gap: 1rem;
   max-width: clamp(50%, 100%, 350px);
   margin: 0 auto;
+  max-width: 100%;
 }
 
 .formGroup {
